# ROS2-Diff-drive-Robot-Simulator

./: CMakeLists.txt  LICENSE  package.xml  readme.md
PCD/: quick.pcd
config/: params.yaml
launch/: simulation.launch.py
rviz/: simulation.rviz
src/: simulated_lidar.cpp  simulation_node.cpp
